
* #12189, #12211: anonymous row variables in explicitly polymorphic type
  annotation, e.g. `'a. [< X of 'a ] -> 'a`, are now implicitly
  universally quantified (in other words, the example above is now read
  as `'a 'r. ([< X of 'a ] as 'r) -> 'a`).
  (Florian Angeletti and Gabriel Scherer, review by Jacques Garrigue)

### Code generation and optimizations:

- #11967: Remove traces of Obj.truncate, which allows some mutable
  loads to become immutable.
  (Nick Barnes, review by Vincent Laviron and KC Sivaramakrishnan)

- #9945, #10883: Turn boolean-result float comparisons into primitive operations
  Uses the architecture's elementary operations for float comparisons,
  when available, rather than branching and then setting the return value.
  (Stefan Muenzel, review by Stephen Dolan, Alain Frisch and Vincent Laviron)

- #8998, #11321, #11430: change mangling of OCaml long identifiers
  from `camlModule__name_NNN` to `camlModule.name_NNN`.  The previous
  mangling schema, using `__`, was ambiguous.
  (Xavier Leroy, report by sliquister and Michael Bacarella,
   review by Gabriel Scherer)

- #10834: The -safer-matching option disables type-based optimizations of
  pattern-matching compilation. This allows to produce a match failure if
  a pattern-matching was wrongly assumed to be exhaustive. Since the
  exhaustiveness check for GADTs has had bugs in the past, it may be
  useful if you need extra security with GADTs.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11102: Speed up register allocation by permanently spilling registers
  (Stephen Dolan, review by Xavier Leroy)

- #11383: Restrict the local function optimisation to forbid moving code
  inside a sub-function
  (Vincent Laviron, review by Gabriel Scherer)

- #11686: Better spilling heuristic for the Linear Scan allocator for more
  efficient stack usage.
  (Nicolás Ojeda Bär, Gabriel Scherer, Alain Frisch, review by Gabriel Scherer,
  Alain Frisch and Nathanaëlle Courant)
